@@ -31,6 +31,8 @@ Included
 - Binary OID hint counts added for CMS signedData and timestamp EKU indicators.
 - SCM/source evidence adapter extraction deepened:
 - Deterministic repo counters now include tree entry count, branch/tag ref counts, detached HEAD indicator, and working-tree entry count.
+- Image adapter extraction deepened:
+- Deterministic header evidence now includes ISO PVD, VHD footer, VHDX signature, QCOW2 magic/version, and VMDK descriptor/sparse-magic hints.
 - Container scan now emits adapter metadata/signals plus adapter artifacts using the same deterministic contract as safe-run adapters.
 - Container scan evidence remains local-only inspect data and excludes unstable fields (timestamps/raw env/path values).
 - Wave coverage now includes:
